--- a/src/main/resources/views/dbWorkViews/carParametersAdd.fxml
+++ b/src/main/resources/views/dbWorkViews/carParametersAdd.fxml
@@ -1,24 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="194.0" prefWidth="228.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.AddCarController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.AddCarController">
     <children>
-        <Button layoutX="14.0" layoutY="150.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="239.0" stylesheets="@../../styles/styles.css" text="ОК">
+        <Button layoutX="100.0" layoutY="195.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="239.0" stylesheets="@../../styles/styles.css" text="ОК">
             <styleClass>
                 <String fx:value="button_restyling" />
                 <String fx:value="button_restyling_bounds" />
             </styleClass></Button>
-        <TextField fx:id="model" blendMode="MULTIPLY" layoutX="14.0" layoutY="31.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите модель..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
-        <TextField fx:id="tankVolume" blendMode="MULTIPLY" layoutX="14.0" layoutY="112.0" prefHeight="25.0" prefWidth="200.0" promptText="Введите объём бака..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
-        <ComboBox fx:id="comboBox" layoutX="14.0" layoutY="72.0" prefHeight="26.0" prefWidth="200.0" />
-        <Button fx:id="closeButton" layoutX="232.0" layoutY="24.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="5.0">
-            <font>
-                <Font size="6.0" />
-            </font>
-        </Button>
+        <TextField fx:id="model" blendMode="MULTIPLY" layoutX="100.0" layoutY="76.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите модель..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+        <TextField fx:id="tankVolume" blendMode="MULTIPLY" layoutX="100.0" layoutY="157.0" prefHeight="25.0" prefWidth="200.0" promptText="Введите объём бака..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+        <ComboBox fx:id="comboBox" layoutX="100.0" layoutY="117.0" prefHeight="26.0" prefWidth="200.0" />
+      <AnchorPane fx:id="dragableArea" cache="true" layoutX="11.0" layoutY="11.0" prefHeight="30.0" prefWidth="900.0" styleClass="close_area" stylesheets="@../../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
     </children>
 </AnchorPane>
