--- a/src/main/resources/views/dbWorkViews/dbWork.fxml
+++ b/src/main/resources/views/dbWorkViews/dbWork.fxml
@@ -1,56 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" prefHeight="506.0" prefWidth="775.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.DBWorkController">
+<AnchorPane fx:id="anchorPane" prefHeight="600.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.DBWorkController">
    <children>
-      <TableView fx:id="fuelTable" blendMode="MULTIPLY" layoutX="14.0" layoutY="37.0" prefHeight="318.0" prefWidth="356.0">
+      <TableView fx:id="fuelTable" blendMode="MULTIPLY" layoutX="12.0" layoutY="47.0" prefHeight="402.0" prefWidth="485.0" AnchorPane.leftAnchor="11.0" AnchorPane.topAnchor="45.0">
         <columns>
           <TableColumn fx:id="columnName" prefWidth="175.0" text="Вид топлива" />
           <TableColumn fx:id="columnPrice" prefWidth="180.0" text="Цена (рублей за литр)" />
         </columns>
       </TableView>
-      <Button layoutX="92.0" layoutY="375.0" mnemonicParsing="false" onAction="#addFuel" prefHeight="58.0" prefWidth="89.0" text="Добавить">
+      <Button layoutX="154.0" layoutY="469.0" mnemonicParsing="false" onAction="#addFuel" prefHeight="58.0" prefWidth="89.0" text="Добавить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="92.0" layoutY="420.0" mnemonicParsing="false" onAction="#changeFuel" prefHeight="58.0" prefWidth="89.0" text="Изменить">
+      <Button layoutX="154.0" layoutY="514.0" mnemonicParsing="false" onAction="#changeFuel" prefHeight="58.0" prefWidth="89.0" text="Изменить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="92.0" layoutY="464.0" mnemonicParsing="false" onAction="#removeFuel" prefHeight="58.0" prefWidth="89.0" text="Удалить">
+      <Button layoutX="154.0" layoutY="558.0" mnemonicParsing="false" onAction="#removeFuel" prefHeight="58.0" prefWidth="89.0" text="Удалить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <TableView fx:id="carTable" blendMode="MULTIPLY" layoutX="409.0" layoutY="37.0" prefHeight="318.0" prefWidth="356.0">
+      <TableView fx:id="carTable" blendMode="MULTIPLY" layoutX="409.0" layoutY="47.0" prefHeight="402.0" prefWidth="485.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="46.0">
         <columns>
           <TableColumn fx:id="columnModel" prefWidth="144.0" text="Модель" />
             <TableColumn fx:id="columnFuelType" minWidth="0.0" prefWidth="98.0" text="Вид топлива" />
             <TableColumn fx:id="columnTankVolume" prefWidth="113.0" text="Объём бака (л)" />
         </columns>
       </TableView>
-      <Button layoutX="489.0" layoutY="374.0" mnemonicParsing="false" onAction="#addCar" prefHeight="30.0" prefWidth="200.0" text="Добавить">
+      <Button layoutX="640.0" layoutY="469.0" mnemonicParsing="false" onAction="#addCar" prefHeight="30.0" prefWidth="200.0" text="Добавить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="489.0" layoutY="419.0" mnemonicParsing="false" onAction="#changeCar" prefHeight="26.0" prefWidth="200.0" text="Изменить">
+      <Button layoutX="640.0" layoutY="514.0" mnemonicParsing="false" onAction="#changeCar" prefHeight="26.0" prefWidth="200.0" text="Изменить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <Button layoutX="489.0" layoutY="463.0" mnemonicParsing="false" onAction="#removeCar" prefHeight="26.0" prefWidth="200.0" text="Удалить">
+      <Button layoutX="640.0" layoutY="558.0" mnemonicParsing="false" onAction="#removeCar" prefHeight="26.0" prefWidth="200.0" text="Удалить">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="772.0" styleClass="close_area" stylesheets="@../../styles/styles.css">
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="772.0" styleClass="close_area" stylesheets="@../../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
