--- a/src/main/resources/views/dbWorkViews/fuelParametersAdd.fxml
+++ b/src/main/resources/views/dbWorkViews/fuelParametersAdd.fxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="155.0" prefWidth="228.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.AddFuelController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.dbControllers.AddFuelController">
    <children>
-      <Button layoutX="14.0" layoutY="119.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="239.0" stylesheets="@../../styles/styles.css" text="ОК">
+      <Button layoutX="100.0" layoutY="174.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="239.0" stylesheets="@../../styles/styles.css" text="ОК">
          <styleClass>
             <String fx:value="button_restyling" />
             <String fx:value="button_restyling_bounds" />
          </styleClass></Button>
-      <TextField fx:id="name" blendMode="MULTIPLY" layoutX="14.0" layoutY="42.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите вид топлива..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
-      <TextField fx:id="price" blendMode="MULTIPLY" layoutX="14.0" layoutY="81.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите цену..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="226.0" styleClass="close_area" stylesheets="@../../styles/styles.css">
+      <TextField fx:id="name" blendMode="MULTIPLY" layoutX="100.0" layoutY="97.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите вид топлива..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+      <TextField fx:id="price" blendMode="MULTIPLY" layoutX="100.0" layoutY="136.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите цену..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="226.0" styleClass="close_area" stylesheets="@../../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
