--- a/src/main/resources/views/modeller.fxml
+++ b/src/main/resources/views/modeller.fxml
@@ -39,8 +39,8 @@
             <String fx:value="button_restyling_bounds" />
          </styleClass>
       </Button>
-      <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" />
-      <Line endX="86.0" endY="315.0" layoutX="466.0" layoutY="185.0" startX="86.0" startY="-186.0" />
+      <Line endX="-47.0" endY="310.0" layoutX="267.0" layoutY="190.0" startX="-47.0" startY="-190.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <Line endX="86.0" endY="315.0" layoutX="466.0" layoutY="185.0" startX="86.0" startY="-186.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <Label layoutX="242.0" layoutY="47.0" stylesheets="@../styles/styles.css" text="ПАРАМЕТРЫ ЭЛЕМЕНТОВ">
          <font>
             <Font size="20.0" />
@@ -128,7 +128,7 @@
          </font>
       </Label>
       <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" amountToStepBy="0.1" blendMode="MULTIPLY" layoutX="853.0" layoutY="395.0" max="1" min="0" prefHeight="34.0" prefWidth="74.0" stylesheets="@../styles/styles.css" />
-      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1000.0" styleClass="close_area" stylesheets="@../styles/styles.css">
+      <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1000.0" styleClass="close_area" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
