--- a/src/main/resources/views/imitation.fxml
+++ b/src/main/resources/views/imitation.fxml
@@ -41,7 +41,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="statistics" layoutX="839.0" layoutY="919.0" prefHeight="87.0" prefWidth="204.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="37.0">
+      <AnchorPane fx:id="statistics" layoutX="761.0" layoutY="562.0" prefHeight="87.0" prefWidth="204.0" AnchorPane.bottomAnchor="10.0">
          <children>
             <Label layoutX="65.0" styleClass="text" stylesheets="@../styles/styles.css" text="Статистика">
                <font>
@@ -110,7 +110,7 @@
             <Slider fx:id="sliderMode" blendMode="MULTIPLY" blockIncrement="1.0" layoutX="3.0" layoutY="28.0" majorTickUnit="2.0" max="3.0" min="1.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="cashBoxPopup" layoutX="24.0" layoutY="164.0" prefHeight="96.0" prefWidth="143.0">
+      <AnchorPane fx:id="cashBoxPopup" layoutX="24.0" layoutY="170.0" prefHeight="96.0" prefWidth="143.0" visible="false">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Profit" />
             <Label layoutX="10.0" layoutY="40.0" text="Balance" />
@@ -120,7 +120,7 @@
             <Label fx:id="cashboxCriticalValue" layoutX="115.0" layoutY="70.0" text="0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="fuelTankPopup" layoutX="221.0" layoutY="560.0" prefHeight="102.0" prefWidth="140.0" styleClass="window_background" visible="false">
+      <AnchorPane fx:id="fuelTankPopup" layoutX="26.0" layoutY="170.0" prefHeight="102.0" prefWidth="140.0" visible="false">
          <children>
             <Label layoutX="10.0" layoutY="10.0" text="Fuel" />
             <Label layoutX="10.0" layoutY="31.0" text="Volume" />
@@ -132,7 +132,7 @@
             <Label fx:id="fueltankCurrentVolume" layoutX="115.0" layoutY="74.0" text="0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="petrolStationPopup" layoutX="399.0" layoutY="539.0" prefHeight="66.0" prefWidth="143.0" styleClass="window_background" visible="false">
+      <AnchorPane fx:id="petrolStationPopup" layoutX="24.0" layoutY="170.0" prefHeight="66.0" prefWidth="143.0" visible="false">
          <children>
             <Label layoutX="10.0" layoutY="40.0" text="Status" />
             <Label fx:id="petrolstationSpeed" layoutX="115.0" layoutY="10.0" text="0" />
@@ -145,7 +145,7 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <TextArea fx:id="log_list" blendMode="MULTIPLY" layoutX="744.0" layoutY="65.0" prefHeight="495.0" prefWidth="257.0" AnchorPane.rightAnchor="13.0" />
+      <TextArea fx:id="log_list" blendMode="MULTIPLY" layoutX="744.0" layoutY="65.0" prefHeight="363.0" prefWidth="257.0" AnchorPane.rightAnchor="13.0" />
       <Button fx:id="backToMenuButton" layoutX="14.0" layoutY="911.0" mnemonicParsing="false" text="В меню" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0">
          <styleClass>
             <String fx:value="button_restyling_bounds" />
