feat: add objects adding bounds; fix: log

--- a/src/main/resources/views/modeller.fxml
+++ b/src/main/resources/views/modeller.fxml
@@ -115,7 +115,7 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" amountToStepBy="0.1" blendMode="MULTIPLY" layoutX="853.0" layoutY="395.0" max="1" min="0" prefHeight="34.0" prefWidth="74.0" stylesheets="@../styles/styles.css" />
+      <Spinner id="spinnerPOA" fx:id="probabilityOfArrival" amountToStepBy="0.1" blendMode="MULTIPLY" layoutX="853.0" layoutY="395.0" max="1" min="0" initialValue="1" prefHeight="34.0" prefWidth="74.0" stylesheets="@../styles/styles.css" />
       <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="1000.0" styleClass="close_area" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
             <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
