--- a/src/main/resources/views/saveTopology.fxml
+++ b/src/main/resources/views/saveTopology.fxml
@@ -4,14 +4,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="129.0" prefWidth="222.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SaveTopologyController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SaveTopologyController">
    <children>
-      <TextField fx:id="textField" blendMode="MULTIPLY" layoutX="11.0" layoutY="26.0" prefHeight="25.0" prefWidth="194.0" promptText="Введите название топологии..." styleClass="button_restyling_bounds" />
-      <Button fx:id="button" layoutX="11.0" layoutY="79.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="ОК">
+      <TextField fx:id="textField" blendMode="MULTIPLY" layoutX="100.0" layoutY="109.0" prefHeight="25.0" prefWidth="194.0" promptText="Введите название топологии..." styleClass="button_restyling_bounds" />
+      <Button fx:id="button" layoutX="100.0" layoutY="162.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="ОК">
          <styleClass>
             <String fx:value="button_restyling_bounds" />
             <String fx:value="button_restyling" />
          </styleClass></Button>
+      <AnchorPane cache="true" layoutX="11.0" layoutY="11.0" prefHeight="30.0" prefWidth="384.0" styleClass="close_area" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../../../../../../OneDrive/Документы/7%20семестр/Моё/ТП/GasStation/src/main/resources/styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+               <font>
+                  <Font size="6.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
