--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane fx:id="anchorPane" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConstructorController">
       <children>
-      <AnchorPane fx:id="buttons" layoutX="14.0" layoutY="71.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="45.0">
+      <AnchorPane fx:id="buttons" layoutX="14.0" layoutY="40.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="40.0">
          <children>
                <Button mnemonicParsing="false" onAction="#saveTopology" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Сохранить топологию" wrapText="true">
                   <font>
@@ -23,7 +23,7 @@
                   <String fx:value="button_restyling_bounds" />
                </styleClass>
                </Button>
-               <Button fx:id="checkCorrect" layoutY="40.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Проверка корректности" wrapText="true">
+               <Button fx:id="checkCorrect" onAction="#checkTopology" layoutY="40.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Проверка корректности" wrapText="true">
                   <font>
                      <Font size="17.0" />
                   </font>
