--- a/src/main/resources/views/constructor.fxml
+++ b/src/main/resources/views/constructor.fxml
@@ -23,24 +23,6 @@
                   <String fx:value="button_restyling_bounds" />
                </styleClass>
                </Button>
-               <Button fx:id="checkCorrect" onAction="#checkTopology" layoutY="40.0" mnemonicParsing="false" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Проверка корректности" wrapText="true">
-                  <font>
-                     <Font size="17.0" />
-                  </font>
-               <styleClass>
-                  <String fx:value="button_restyling" />
-                  <String fx:value="button_restyling_bounds" />
-               </styleClass>
-            </Button>
-               <Button layoutY="80.0" mnemonicParsing="false" onAction="#createModeller" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Перейти к моделированию" wrapText="true">
-                  <font>
-                     <Font size="17.0" />
-                  </font>
-               <styleClass>
-                  <String fx:value="button_restyling" />
-                  <String fx:value="button_restyling_bounds" />
-               </styleClass>
-            </Button>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="dragableArea" cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="900.0" styleClass="close_area" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
@@ -57,7 +39,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <ScrollPane fx:id="scrollPaneElements" blendMode="MULTIPLY" layoutX="735.0" layoutY="45.0" prefHeight="545.0" prefWidth="166.0" AnchorPane.bottomAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="45.0">
+      <ScrollPane fx:id="scrollPaneElements" blendMode="MULTIPLY" layoutX="735.0" layoutY="47.0" prefHeight="494.0" prefWidth="166.0" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="46.0">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="376.0" prefWidth="147.0">
                <children>
@@ -135,4 +117,22 @@
             </AnchorPane>
         </content>
       </ScrollPane>
+         <Button layoutX="119.0" layoutY="260.0" mnemonicParsing="false" onAction="#createModeller" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Перейти к моделированию" wrapText="true" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
+            <font>
+               <Font size="17.0" />
+            </font>
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass>
+      </Button>
+         <Button fx:id="checkCorrect" layoutX="580.0" layoutY="559.0" mnemonicParsing="false" onAction="#checkTopology" prefHeight="94.0" prefWidth="153.0" stylesheets="@../styles/styles.css" text="Проверка корректности" wrapText="true" AnchorPane.bottomAnchor="10.0">
+            <font>
+               <Font size="17.0" />
+            </font>
+         <styleClass>
+            <String fx:value="button_restyling" />
+            <String fx:value="button_restyling_bounds" />
+         </styleClass>
+      </Button>
       </children></AnchorPane>
