--- a/src/main/resources/views/saveTopology.fxml
+++ b/src/main/resources/views/saveTopology.fxml
@@ -16,7 +16,7 @@
          </styleClass></Button>
       <AnchorPane cache="true" layoutX="11.0" layoutY="11.0" prefHeight="30.0" prefWidth="384.0" styleClass="close_area" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../../../../../../OneDrive/Документы/7%20семестр/Моё/ТП/GasStation/src/main/resources/styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../../../../../../../OneDrive/Документы/7%20семестр/Моё/ТП/GasStation/src/main/resources/styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font size="6.0" />
                </font>
