--- a/src/main/resources/views/dbWorkViews/carParametersAdd.fxml
+++ b/src/main/resources/views/dbWorkViews/carParametersAdd.fxml
@@ -19,7 +19,7 @@
         <ComboBox fx:id="comboBox" layoutX="100.0" layoutY="117.0" prefHeight="26.0" prefWidth="200.0" />
       <AnchorPane fx:id="dragableArea" cache="true" layoutX="11.0" layoutY="11.0" prefHeight="30.0" prefWidth="900.0" styleClass="close_area" stylesheets="@../../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font size="6.0" />
                </font>
