--- a/src/main/resources/views/dbWorkViews/fuelParametersAdd.fxml
+++ b/src/main/resources/views/dbWorkViews/fuelParametersAdd.fxml
@@ -17,7 +17,7 @@
       <TextField fx:id="price" blendMode="MULTIPLY" layoutX="100.0" layoutY="136.0" prefHeight="41.0" prefWidth="239.0" promptText="Введите цену..." styleClass="button_restyling_bounds" stylesheets="@../../styles/styles.css" />
       <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="226.0" styleClass="close_area" stylesheets="@../../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
-            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font size="6.0" />
                </font>
