--- a/src/main/resources/views/downloadTopology.fxml
+++ b/src/main/resources/views/downloadTopology.fxml
@@ -13,11 +13,11 @@
           <TableColumn fx:id="columnName" prefWidth="377.0" text="Название топологии" />
         </columns>
       </TableView>
-      <Button fx:id="buttonSelect" layoutX="206.0" layoutY="256.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="185.0" styleClass="button_restyling" text="Выбрать" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
-       <Button fx:id="buttonDelete" layoutX="13.0" layoutY="256.0" mnemonicParsing="false" onAction="#deleteTopology" prefHeight="25.0" prefWidth="185.0" styleClass="button_restyling" text="Удалить" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" />
+      <Button fx:id="buttonSelect" layoutX="121.0" layoutY="261.0" mnemonicParsing="false" onAction="#selectTopology" prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: #ff8a65;" styleClass="button_restyling" text="Выбрать" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="10.0" />
+       <Button fx:id="buttonDelete" layoutX="13.0" layoutY="256.0" mnemonicParsing="false" onAction="#deleteTopology" prefHeight="25.0" prefWidth="185.0" styleClass="button_restyling" text="Удалить" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
       <AnchorPane fx:id="dragableArea" cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="252.0" styleClass="close_area" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
-            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" style="-fx-background-radius: 20;" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font size="6.0" />
                </font>
