--- a/src/main/resources/views/developerInfo.fxml
+++ b/src/main/resources/views/developerInfo.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DevInfoController">
    <children>
       <TextArea blendMode="MULTIPLY" editable="false" layoutX="30.0" layoutY="55.0" prefHeight="223.0" prefWidth="341.0" styleClass="text" stylesheets="@../styles/styles.css" text="&#9;&#9;Лабораторный практикум&#10;по дисциплине &quot;Технологии программирования&quot;&#10;&#9;Проект &quot;Система моделирования работы&#10;&#9;&#9;автозаправочной станции&quot;&#10;Разработчики:&#10;Конев А.В.&#10;Сергеев Н.С.&#10;Фомичёв А.В.&#10;&#9;&#9;&#9;гр.6402-090301D&#10;&#9;&#9;Самарский Университет, 2019">
          <font>
@@ -14,7 +14,7 @@
       </TextArea>
       <AnchorPane cache="true" layoutX="1.0" layoutY="1.0" prefHeight="30.0" prefWidth="400.0" styleClass="close_area" stylesheets="@../styles/styles.css" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
          <children>
-            <Button fx:id="closeButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
+            <Button fx:id="devInfoCloseButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="15.0" prefWidth="15.0" styleClass="button_close" stylesheets="@../styles/styles.css" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="7.0">
                <font>
                   <Font size="6.0" />
                </font>
