--- a/src/main/resources/views/saveTopology.fxml
+++ b/src/main/resources/views/saveTopology.fxml
@@ -2,14 +2,15 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="300.0" prefWidth="400.0" styleClass="window_background" stylesheets="@../styles/styles.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SaveTopologyController">
    <children>
-      <TextField fx:id="textField" blendMode="MULTIPLY" layoutX="100.0" layoutY="109.0" prefHeight="25.0" prefWidth="194.0" promptText="Введите название топологии..." styleClass="button_restyling_bounds" />
-      <Button fx:id="button" layoutX="100.0" layoutY="162.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="ОК">
+      <TextField fx:id="textField" blendMode="MULTIPLY" layoutX="100.0" layoutY="135.0" prefHeight="25.0" prefWidth="194.0" promptText="Введите название топологии..." styleClass="button_restyling_bounds" />
+      <Button fx:id="button" layoutX="100.0" layoutY="256.0" mnemonicParsing="false" onAction="#save" prefHeight="25.0" prefWidth="62.0" text="ОК" AnchorPane.bottomAnchor="10.0">
          <styleClass>
             <String fx:value="button_restyling_bounds" />
             <String fx:value="button_restyling" />
@@ -23,5 +24,6 @@
             </Button>
          </children>
       </AnchorPane>
+      <Label layoutX="102.0" layoutY="108.0" text="Введите название топологии..." />
    </children>
 </AnchorPane>
